--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
   font-family: "Ubuntu", sans-serif;
 }
 
-.container {
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navbar-container {
@@ -74,6 +77,10 @@
   width: 70%;
   background-color: rgb(255, 255, 255);
   margin: 15px;
+  box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
+  -webkit-box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
+  -moz-box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
+  border-radius: 5px;
 }
 
 .short-profile-container {
@@ -81,10 +88,8 @@
 }
 
 .title {
-    font-size: 13;
+  font-size: 13;
 }
-
-
 
 .short-profile-content {
   display: flex;
@@ -102,7 +107,7 @@
 }
 
 .text-basabasi {
-    margin: 5px;
+  margin: 5px;
 }
 
 .footer-container {
@@ -110,10 +115,76 @@
   justify-content: center;
   align-items: center;
   height: 150px;
-  background-color: aquamarine;
+  background-color: #333;
 }
 
 .h1-footer {
-  color: rgb(105, 105, 125);
+  color: rgb(255, 255, 255);
   font-size: 25px;
+}
+
+.myskills-container {
+  width: 80%;
+}
+
+
+
+.my-skills {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.list-skills {
+  display: flex;
+}
+
+.html-skills, .javascript-skills, .css-skills{
+  margin: 9px;
+}
+
+.img-card-skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  width: 150px;
+  height: 200px;
+}
+
+.img-card-skills img {
+  width: 150px;
+}
+
+.skill-bar {
+  margin: 10px;
+  width: 100%;
+  background-color:#ddd;
+  border-radius: 4px;
+}
+
+.skill-bar p {
+  padding: 2px;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.html-bar {
+  width: 90%;
+  background-color: rgb(229, 46, 14);
+}
+
+.css-bar {
+  width: 85%;
+  background-color: rgb(67, 41, 200);
+}
+
+.javascript-bar {
+  width: 50%;
+  background-color: rgb(208, 159, 14);
 }
