--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@
   width: 70%;
   background-color: rgb(255, 255, 255);
   margin: 15px;
-  box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
-  -webkit-box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
-  -moz-box-shadow: 15px 19px 17px -14px rgba(0,0,0,0.35);
+  box-shadow: 15px 19px 17px -14px rgba(0, 0, 0, 0.35);
+  -webkit-box-shadow: 15px 19px 17px -14px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 15px 19px 17px -14px rgba(0, 0, 0, 0.35);
   border-radius: 5px;
 }
 
@@ -125,9 +125,8 @@
 
 .myskills-container {
   width: 80%;
+  margin-top: 10px;
 }
-
-
 
 .my-skills {
   margin-top: 10px;
@@ -135,14 +134,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 .list-skills {
   display: flex;
 }
 
-.html-skills, .javascript-skills, .css-skills{
+.html-skills,
+.javascript-skills,
+.css-skills {
   margin: 9px;
 }
 
@@ -162,7 +162,7 @@
 .skill-bar {
   margin: 10px;
   width: 100%;
-  background-color:#ddd;
+  background-color: #ddd;
   border-radius: 4px;
 }
 
@@ -187,4 +187,44 @@
 .javascript-bar {
   width: 50%;
   background-color: rgb(208, 159, 14);
+}
+
+.whyme-container {
+  display: flex;
+  height: 100%;
+  width: 80%;
+  box-shadow: -30px 34px 37px -28px rgba(0,0,0,0.55);
+  -webkit-box-shadow: -30px 34px 37px -28px rgba(0,0,0,0.55);
+  -moz-box-shadow: -30px 34px 37px -28px rgba(0,0,0,0.55);
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border-radius: 8px;
+}
+
+.whyme-pic-container {
+  background-color: yellow;
+  width: 500px;
+  height: 100%;
+}
+
+.whyme-content-container {
+  width: 100%;
+  height: 100%;
+}
+
+.whyme-pic-container img {
+  width: 500px;
+}
+
+.whyme-title-content {
+  margin: 10px;
+  height: 30px;
+  text-align: right;
+}
+
+.whyme-content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 372px;
 }
